# datatrac

./: README.md  main.py  pyproject.toml  readme2.md
datatrac/api/: main.py  schemas.py  server.py
datatrac/api/routers/: datasets.py
datatrac/cli/: main.py
datatrac/cli/commands/: delete.py  fetch.py  lineage.py  push.py
datatrac/core/: config.py  db.py  manager.py  models.py  utils.py
datatrac/frontend/: index.html  package-lock.json  package.json
datatrac/frontend/src/: App.jsx  index.css
datatrac/frontend/src/components/: DatasetCard.jsx  DatasetDetail.jsx  DownloadModal.jsx  Header.jsx  LineageDisplay.jsx  TopDatasets.jsx  UploadModal.jsx
datatrac/frontend/src/lib/: utils.js
datatrac/frontend/web/: index.html
datatrac/frontend/web/assets/: index-CndGFQs-.css  index-CyJyUN89.js  index-DXo-rwAq.js
datatrac/web/: app.py
datatrac/web/static/css/: details.css  global.css  index.css  lineage.css
datatrac/web/templates/: details.html  index.html  lineage.html
docs/: allow_list.txt  collected_code.txt  prompts  web ui prompts.md
utils/: allow_list.txt  collected_code.txt  get-all-code.py
