[project]
name = "datatrac"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "rich>=14.1.0",
    "typer>=0.16.1",
    "sqlalchemy>=2.0.30",
]

[project.scripts]
datatrac = "src.cli.main:app"


[tool.uv]
publish-url = "https://test.pypi.org/legacy/"
