[project]
name = "datatrac"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "rich>=14.1.0",
    "typer>=0.16.1",
    "sqlalchemy>=2.0.30",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    "fastapi>=0.111.0",       
    "uvicorn[standard]>=0.29.0"       
]

[project.scripts]
datatrac = "datatrac.cli.main:app"
datatracweb = "datatrac.api.server:start"


[tool.uv]
publish-url = "https://test.pypi.org/legacy/"
